# Programming

./: .gitignore  flip.py
cpp17/performance/: .gitignore  CMakeLists.txt  Makefile  performance.cpp
golang/gotour/: exercise-equivalent-binary-trees.go  exercise-errors.go  exercise-fibonacci-closure.go  exercise-image.go  exercise-loops-and-functions.go  exercise-maps.go  exercise-rot-reader.go  exercise-slices.go  exercise-web-crawler.go
golang/json/: go.mod  main.go
golang/logrotate/: go.mod  main.go
golang/primewheel/: prime.go  prime_test.go
haskell/: .gitignore  ColorTest.hs
haskell/Arrow/: Circuit.hs
haskell/ColorTest/: .gitignore  ColorTest.hs
haskell/HackerRank/: area.hs
haskell/Jugglefest/: Lens.hs  Lens.lhs  Main.hs  Parse.hs  State.hs  StateLens.hs  Types.hs  jugglefest.out.txt
haskell/Lens/: Setter1.hs  Setter2.hs  Setter3.hs  Setter4.hs
haskell/LensOverTea/: Setter0.hs  Setter1.hs  Setter2.hs  Setter3.hs  Setter4.hs  Test1.hs  Traversal.hs
haskell/ListPerf/: ListPerf.cabal  Test.hs  Test.html  cabal.sandbox.config
haskell/MVector/: code.hs  mine.hs  twod.hs
haskell/Pi/: .gitignore  Pi.hs
haskell/PiParallel/: LICENSE  Main.hs  PiParallel.cabal
haskell/PiSpigot/: Pi.hs
haskell/StateRandom/: StateRandom.hs
haskell/Transformers/: eithert.hs  readert.lhs
haskell/fusion/: .gitignore  LICENSE  package.yaml
java/benchmark/: .gitignore  build.gradle  settings.gradle
kotlin/: .gitignore
kotlin/TornadoFX/: build.gradle  build.gradle.kts  settings.gradle
poss_avg/: README.md  conf_avg.py  poss.html
rust/insert/: Cargo.toml
(+44 files in other folders)
